welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:5: error: ';' expected but 'if' found.
	}if (a>=13 == true && a<=19 == true) {
         ^