welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var nbAdos:Int=o
	if (a>=13 == true && a<=19 == true) {
		return nbAdos=nbAdos+1
	}if (a>=13 == true && a<=19 == true) {
		return nbAdos=nbAdos+1
	}if (a>=13 == true && a<=19 == true) {
		return nbAdos=nbAdos+1
	}if (a>=13 == true && a<=19 == true) {
		return nbAdos=nbAdos+1
	}
}
